@@ -1984,15 +1984,27 @@ name|BufferedIndexInput
 block|{
 DECL|class|Descriptor
 specifier|private
+specifier|static
 class|class
 name|Descriptor
 extends|extends
 name|RandomAccessFile
 block|{
+comment|// remember if the file is open, so that we don't try to close it
+comment|// more than once
+DECL|field|isOpen
+specifier|private
+name|boolean
+name|isOpen
+decl_stmt|;
 DECL|field|position
-specifier|public
 name|long
 name|position
+decl_stmt|;
+DECL|field|length
+specifier|final
+name|long
+name|length
 decl_stmt|;
 DECL|method|Descriptor
 specifier|public
@@ -2014,30 +2026,73 @@ argument_list|,
 name|mode
 argument_list|)
 expr_stmt|;
+name|isOpen
+operator|=
+literal|true
+expr_stmt|;
+name|length
+operator|=
+name|length
+argument_list|()
+expr_stmt|;
+block|}
+DECL|method|close
+specifier|public
+name|void
+name|close
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+if|if
+condition|(
+name|isOpen
+condition|)
+block|{
+name|isOpen
+operator|=
+literal|false
+expr_stmt|;
+name|super
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
+block|}
+DECL|method|finalize
+specifier|protected
+name|void
+name|finalize
+parameter_list|()
+throws|throws
+name|Throwable
+block|{
+try|try
+block|{
+name|close
+argument_list|()
+expr_stmt|;
+block|}
+finally|finally
+block|{
+name|super
+operator|.
+name|finalize
+argument_list|()
+expr_stmt|;
+block|}
 block|}
 block|}
 DECL|field|file
 specifier|private
+specifier|final
 name|Descriptor
 name|file
-init|=
-literal|null
-decl_stmt|;
-comment|// remember if the file is open, so that we don't try to close it
-comment|// more than once
-DECL|field|isOpen
-specifier|private
-name|boolean
-name|isOpen
 decl_stmt|;
 DECL|field|isClone
 name|boolean
 name|isClone
-decl_stmt|;
-DECL|field|length
-specifier|private
-name|long
-name|length
 decl_stmt|;
 DECL|method|FSIndexInput
 specifier|public
@@ -2058,17 +2113,6 @@ name|path
 argument_list|,
 literal|"r"
 argument_list|)
-expr_stmt|;
-name|isOpen
-operator|=
-literal|true
-expr_stmt|;
-name|length
-operator|=
-name|file
-operator|.
-name|length
-argument_list|()
 expr_stmt|;
 block|}
 comment|/** IndexInput methods */
@@ -2191,26 +2235,17 @@ parameter_list|()
 throws|throws
 name|IOException
 block|{
-comment|// only close the file if this is not a clone and the
-comment|// file has not been closed yet
+comment|// only close the file if this is not a clone
 if|if
 condition|(
 operator|!
 name|isClone
-operator|&&
-name|isOpen
 condition|)
-block|{
 name|file
 operator|.
 name|close
 argument_list|()
 expr_stmt|;
-name|isOpen
-operator|=
-literal|false
-expr_stmt|;
-block|}
 block|}
 DECL|method|seekInternal
 specifier|protected
@@ -2228,32 +2263,10 @@ name|length
 parameter_list|()
 block|{
 return|return
+name|file
+operator|.
 name|length
 return|;
-block|}
-DECL|method|finalize
-specifier|protected
-name|void
-name|finalize
-parameter_list|()
-throws|throws
-name|Throwable
-block|{
-try|try
-block|{
-name|close
-argument_list|()
-expr_stmt|;
-comment|// close the file
-block|}
-finally|finally
-block|{
-name|super
-operator|.
-name|finalize
-argument_list|()
-expr_stmt|;
-block|}
 block|}
 DECL|method|clone
 specifier|public
@@ -2447,30 +2460,6 @@ operator|.
 name|length
 argument_list|()
 return|;
-block|}
-DECL|method|finalize
-specifier|protected
-name|void
-name|finalize
-parameter_list|()
-throws|throws
-name|Throwable
-block|{
-try|try
-block|{
-name|close
-argument_list|()
-expr_stmt|;
-comment|// close the file
-block|}
-finally|finally
-block|{
-name|super
-operator|.
-name|finalize
-argument_list|()
-expr_stmt|;
-block|}
 block|}
 block|}
 end_class
